atualização antes da aula

--- a/cclhm0069/mod1/sem3_ap.ipynb
+++ b/cclhm0069/mod1/sem3_ap.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"/home/ebn/pCloudDrive/ACADEMIA/UNILAB/Disciplinas/2021.1/CCLHM0069/intro-historia-digital/cclhm0069/mod1/img/chimps_tools.png\" alt=\"Chimps and tools\" style=\"zoom:80%;\" />\n"
+    "<img src=\"img/chimps_tools.png\" alt=\"Chimps and tools\" style=\"zoom:80%;\" />"
    ]
   },
   {
@@ -98,13 +98,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://carolinecriadoperez.com/wp-content/uploads/2020/10/invisible_women_jacket.jpg\" alt=\"invisible women\" style=\"zoom:60%;\" />"
+    "<img src=\"img/book_cover.png\" alt=\"invisible women\" style=\"zoom:80%;\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Exatamente como demonstrado por [Caroline Criado Perez em _Invisible Women_](https://www.invisiblewomenbook.co.uk/).\n",
     "\n",
     "É um artigo que exemplifica com precisão o argumento do livro: \"masculino, a menos que o contrário\". E como que as mulheres são invisibilizadas nos dados e análises científicas.\n",
@@ -289,6 +290,177 @@
    "metadata": {},
    "source": [
     "## E a História Digital nisso tudo?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SILVEIRA, Pedor Telles Da. A arqueologia de um nome. In: **História, técnica e novas mídias**: reflexões sobre a história na era digital. Tese de doutorado. Porto Alegre: UFRGS, 2018. pp 28-62"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pensar sobre o termo história digital, sua história e relação com teoria e metodologia da disciplina. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A História Digital está presa na \"narrativa de progresso técnológico\"? (29)\n",
+    "* \"A história digital deve ser descrita como continuidade ou ruptura em ralação às práticas historiográficas anteriores?\" (32)\n",
+    "* \"Seria a história digital um novo método, u7m novo campo de estudos ou uma renovação geral da historiografia?\" (32)\n",
+    "* Computador e internet = \"queremos utilizar o computador, mas não sabemos como.\" (33)\n",
+    "* Quanto mais habituados a um objeto ou tecnologias mais bem sucedidas e consequentemente gastamos menos tempo refletindo sobre elas? (36)\n",
+    "* A história digital está sempre na promessa de acontercer?\n",
+    "* Está aprisionada pelo domínio das novas ferramentas e tecnologias?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Humanidades Digitais**\n",
+    "\n",
+    "* seria marcada pela cisão entre teoria e prática? (39)\n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Imaginaŕio em torno da computação:\n",
+    "\n",
+    "> Viesse para salvar as humanidades de si mesmas, o que não deixa de representar a crença na capacidade dos computadores realizarem aquilo que os seres humanos não podem fazer.\" (43)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Computadores fazem arte\n",
+    ">\n",
+    ">Artistas fazem dinheiro.\n",
+    ">\n",
+    ">Computadores fazem arte\n",
+    ">\n",
+    ">Artistas fazem dinheiro.\n",
+    ">\n",
+    ">Computadores avançam\n",
+    ">\n",
+    ">Artistas pegam carona.\n",
+    ">\n",
+    ">Cientistas criam robôs\n",
+    ">\n",
+    ">Artistas levam a fama.\n",
+    "\n",
+    "Fred Zero Quatro, 1996\n",
+    "\n",
+    "<div id='rg_embed_link_1419690' class='rg_embed_link' data-song-id='1419690'>Veja a letra completa <a href='https://genius.com/Nacao-zumbi-computadores-fazem-arte-lyrics'>“Computadores Fazem Arte” por Chico Science & Nação Zumbi</a> no Genius</div> <script crossorigin src='//genius.com/songs/1419690/embed.js'></script>\n",
+    "\n",
+    "![BMO](https://media3.giphy.com/media/chE70jbczGnPnBulCY/giphy.gif?cid=ecf05e47ewoqjn3enld8d68x3xtev79cjb7g4lygkc0q5itn&rid=giphy.gif&ct=g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vc conhece a GPT-3?\n",
+    "\n",
+    "\n",
+    "[gpt-3](https://www.theguardian.com/commentisfree/2020/sep/08/robot-wrote-this-article-gpt-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### O que muda com a proximidade entre historiografia e os computadores?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Breve histórico**:\n",
+    "\n",
+    "* Década de 1940 e os modelos matemáticos\n",
+    "* História Social quantitativa e cliometria dos anos 1960\n",
+    "* A creiação de siftwares de análise de texto nos anos 1970"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Após os anos 1990**\n",
+    "\n",
+    "As mudanças técnológicas, a transformação conceitual de como se concebe um computador (não apenas computar, \"mas, agora, passíveis de inúmeros e variados usos\"), transforma também a relação entre história e computação = dai a distinção entre a História digital e as práticas historiográficas que usavam computadores antes do advento da internet e da difusão dos compútadores pessoais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mais do que as Humanidades Digitais, que teriam um caráter muito mais relacionado com \"a natureza computacional das ferramentas digitais\" (48), a História Digital poderia \"resgatar uma concepção mais tradicional do trabalho histórico\" a partir do desencvolvimento tecnológico, \"centrado sobre o narrar, o interpretar e o compreenser\" (49). \n",
+    "\n",
+    "Entretante, na leitura de Pedro Telles, essa \"realização ainda não foi inteiramente cumprida\" (49)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### História e a Internet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WEB 2.0 e os impactos na prática histórica:\n",
+    "\n",
+    "1. Comunicação e divulgação para grande público;\n",
+    "2. Acesso a enorme quantidade de fontes documentais;\n",
+    "3. Diluição da hierarquia entre os profissionais e os demais agentes interessados na história."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A questão da técnica\n",
+    "\n",
+    "Sistema técnico: \"reunião de artefatos físicos, organizações sociais, leis e matérias-primas que condicionam o aparecimento das tecnologias\" (53)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mediação\n",
+    "\n",
+    "\"uma atividade que é realizada através dos computadores e que fornece o enquadramento para um mundo no qual a intersubjetividade é construída junto com o funcionamento dos aparelhos técnicos.\" (59)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Há separação entre real e digital?\n",
+    "\n",
+    "[William Gibson (2010)](https://www.nytimes.com/2010/09/01/opinion/01gibson.html): \"O ciberspaco [...] colonizou o mundo físico\" (59)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Perceber como as tecnologias digitais e as novas mídias são constitutivas da nossa experiência, das quais o cotidiano e apenas uma de suas manifestações (60)"
    ]
   }
  ],
