--- a/cclhm0069/mod2/sem7.ipynb
+++ b/cclhm0069/mod2/sem7.ipynb
@@ -15,11 +15,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | [Encontro Virtual 4 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem7.html#encontro-virtual-4-as)| Tarefa 4 (AS)|\n",
-    "| ------------- | -------------------------------------------- |-------------------------------------------- |\n",
-    "| Data e hora | 24/11/2021, às 19h | até 24/11/2021 |\n",
-    "| Carga Horária | 2h30 | 1h |\n",
-    "| Descrição | Tratamento de texto com OCR | Instalar gImageReader |"
+    "## Encontro Virtual 4 (AS)\n",
+    "\n",
+    "**Tema**: Tratamento de texto com OCR\n",
+    "\n",
+    "**Data**:24/11/2021\n",
+    "\n",
+    "**CH**: 2h30min\n",
+    "\n",
+    "**Plataforma**: `Google Meet` - link enviado por e-mail.\n",
+    "\n",
+    "```{Attention}\n",
+    "[_Clique aqui para acessar a apresentação da aula_](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem7_ap.html).\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tarefa 4 (AS)\n",
+    "\n",
+    "**Data**: até 24/11/2021\n",
+    "\n",
+    "1. Assistar o tutorial de instalação do gImageReader;\n",
+    "2. Instalar o programa no computador."
    ]
   }
  ],
