--- a/cclhm0069/mod2/sem6.ipynb
+++ b/cclhm0069/mod2/sem6.ipynb
@@ -15,11 +15,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | [Atividade Assíncrona 3 (AA)](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem6.html#atividade-assíncrona-3-aa)| Tarefa 3 (AS)|\n",
-    "| ------------- | -------------------------------------------- |-------------------------------------------- |\n",
-    "| Data e hora | 16/11/2021 a 19/11/2021 | 16/11/2021 a 19/11/2021 |\n",
-    "| Carga Horária | 2h30 | 1h |\n",
-    "| Descrição | Vídeo-aula de Zotero | Criar perfil e instalar o Zotero |"
+    "## Atividade Assíncrona 3 (AA)\n",
+    "\n",
+    "**Tema**: Organização de pesquisa e referêncas com Zotero\n",
+    "\n",
+    "**Data**: 16/11/2021 a 19/11/2021\n",
+    "\n",
+    "**CH**: 2h30min\n",
+    "\n",
+    "**Plataforma**: `YouTube` - link do [tutorial](https://youtu.be/CPdhyKboKC0) e link do [workshop](https://youtu.be/I5ohkh5d51Y).\n",
+    "\n",
+    "```{Attention}\n",
+    "[_Clique aqui para acessar a apresentação da aula_](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem6_ap.html).\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tarefa 3 (AA)\n",
+    "\n",
+    "**Tema**: Iniciando com o Zotero\n",
+    "\n",
+    "**Data**: 16/11/2021 a 19/11/2021\n",
+    "\n",
+    "**CH**: 1 hora\n",
+    "\n",
+    "1. Criar uma conta no [Zotero](https://www.zotero.org/);\n",
+    "2. Instalar o programa no computador e incluir a [bibliografia](https://ericbrasiln.github.io/intro-historia-digital/1_1_biblio.html) do curso no programa.\n",
+    "3. Integrar o programa com editor de texto (Word, LibreOffice, etc) e gerar citações automáticas no estilo **ABNT**."
    ]
   }
  ],
