update aula 7 ex ocr

--- a/cclhm0069/mod2/sem6_ap.ipynb
+++ b/cclhm0069/mod2/sem6_ap.ipynb
@@ -29,36 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"remove-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "from IPython.display import YouTubeVideo\n",
-    "\n",
-    "def display_yotube_video(url, **kwargs):\n",
-    "    \"\"\"\n",
-    "    Displays a Youtube video in a Jupyter notebook.\n",
-    "    \n",
-    "    Args:\n",
-    "        url (string): a link to a Youtube video.\n",
-    "        **kwargs: further arguments for IPython.display.YouTubeVideo\n",
-    "    \n",
-    "    Returns:\n",
-    "        YouTubeVideo: a video that is displayed in your notebook.\n",
-    "    \"\"\"\n",
-    "    id_ = url.split(\"=\")[-1]\n",
-    "    return YouTubeVideo(id_, **kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -76,22 +47,17 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fe626c33100>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fe626c49af0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"remove-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "display_yotube_video(\"https://www.youtube.com/watch?v=CPdhyKboKC0\", width=560, height=315)"
+    "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo(\"CPdhyKboKC0\", width=560, height=315)"
    ]
   },
   {
@@ -103,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -121,22 +87,16 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fe624365580>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fe6148563d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"remove-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
-    "display_yotube_video(\"https://www.youtube.com/watch?v=I5ohkh5d51Y\", width=560, height=315)"
+    "YouTubeVideo(\"I5ohkh5d51Y\", width=560, height=315)"
    ]
   },
   {
