--- a/cclhm0069/mod2/sem7_ap.ipynb
+++ b/cclhm0069/mod2/sem7_ap.ipynb
@@ -23,6 +23,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     \n",
+      "   \n",
+      "  \n",
+      "  \n",
+      "   \n",
+      "  \n",
+      "   \n",
+      " \n",
+      "    \n",
+      "  \n",
+      " \n",
+      "  \n",
+      "\n",
+      "Government House,\n",
+      "\n",
+      "19th February, 1904.\n",
+      "\n",
+      "sir,\n",
+      "\n",
+      "I have the honour to forward for your\n",
+      "information a copy of a report upon the conduct of the\n",
+      "public and the police dubing the recent Carnival which\n",
+      "\n",
+      "I think may be regarded as highly satisfactory.\n",
+      "\n",
+      "Qe The importance of the matter lies wholly\n",
+      "in the fact that the manner in which the Carnival has\n",
+      "passed off may be regarded, I consider, as indicative\n",
+      "of a marked improvement in the state of general public\n",
+      "\n",
+      "feeling in Port-of-Spain, both towards the Government\n",
+      "\n",
+      "and towards the Police.\n",
+      "\n",
+      "I have the honour to bes\n",
+      "\n",
+      "Sir,\n",
+      "\n",
+      "Your most obedient,\n",
+      "\n",
+      "humble Servant,\n",
+      "\n",
+      "hevliche a\n",
+      "Silane —\n",
+      "\n",
+      "G Ov) 6s momen.\n",
+      "\n",
+      " \n",
+      "\f\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exemplo de OCR com Tesseract\n",
+    "import cv2 # é um módulo para manipulação de imagens\n",
+    "import pytesseract # é uma biblioteca para reconhecimento de texto\n",
+    "\n",
+    "# carregar a imagem\n",
+    "img_path = 'img/IMG_4689.jpg'\n",
+    "# ler a imagem usando o módulo cv2\n",
+    "img = cv2.imread(img_path)\n",
+    "\n",
+    "# aplicar o OCR sobre a imagem\n",
+    "text = pytesseract.image_to_string(img)\n",
+    "\n",
+    "# exibir o texto\n",
+    "print(text)\n",
+    "\n",
+    "# salvar o texto em um arquivo\n",
+    "with open('ex_ocr_img.txt', 'w') as f:\n",
+    "    f.write(text)\n",
+    "# fechar o arquivo\n",
+    "f.close()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -49,38 +133,35 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fa38fdccf70>"
+       "<IPython.lib.display.YouTubeVideo at 0x7fa38fdccdf0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "{\n",
-    "    \"tags\": [\n",
-    "        \"remove-input\",\n",
-    "    ]\n",
-    "}\n",
-    "\n",
     "from IPython.display import YouTubeVideo\n",
+    "YouTubeVideo(\"_7eqj01Hn0M\", width=560, height=315)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Workshop de reconhecimento de caracteres com gImageReader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os exemplos usados na aula podem ser acessados nos seguintes links:\n",
     "\n",
-    "def display_yotube_video(url, **kwargs):\n",
-    "    \"\"\"\n",
-    "    Displays a Youtube video in a Jupyter notebook.\n",
-    "    \n",
-    "    Args:\n",
-    "        url (string): a link to a Youtube video.\n",
-    "        **kwargs: further arguments for IPython.display.YouTubeVideo\n",
-    "    \n",
-    "    Returns:\n",
-    "        YouTubeVideo: a video that is displayed in your notebook.\n",
-    "    \"\"\"\n",
-    "    id_ = url.split(\"=\")[-1]\n",
-    "    return YouTubeVideo(id_, **kwargs)\n",
-    "\n",
-    "display_yotube_video(\"https://www.youtube.com/watch?v=_7eqj01Hn0M\", width=560, height=315)\n"
+    "1. [Jornal do Brasil, 28 de outubro de 2002, p.1](cclhm0069/mod2/ex_OCR/img_01.jpeg)\n",
+    "2. [Jornal do Brasil, 08 de janeiro de 1917, p.1](cclhm0069/mod2/ex_OCR/img_02.jpeg)\n",
+    "3. [Eugene D. Genovese - Da Rebelião à Revolução](cclhm0069/mod2/ex_OCR/ex_pdf.pdf)"
    ]
   },
   {
