correção link exemplos ocr

--- a/cclhm0069/mod2/sem7_ap.ipynb
+++ b/cclhm0069/mod2/sem7_ap.ipynb
@@ -159,9 +159,9 @@
    "source": [
     "Os exemplos usados na aula podem ser acessados nos seguintes links:\n",
     "\n",
-    "1. [Jornal do Brasil, 28 de outubro de 2002, p.1](cclhm0069/mod2/ex_OCR/img_01.jpeg)\n",
-    "2. [Jornal do Brasil, 08 de janeiro de 1917, p.1](cclhm0069/mod2/ex_OCR/img_02.jpeg)\n",
-    "3. [Eugene D. Genovese - Da Rebelião à Revolução](cclhm0069/mod2/ex_OCR/ex_pdf.pdf)"
+    "1. [Jornal do Brasil, 28 de outubro de 2002, p.1](https://github.com/ericbrasiln/intro-historia-digital/blob/4e41dca69dd2fd84b1728531a71b120166e86532/cclhm0069/mod2/ex_OCR/img_01.jpeg)\n",
+    "2. [Jornal do Brasil, 08 de janeiro de 1917, p.1](https://github.com/ericbrasiln/intro-historia-digital/blob/4e41dca69dd2fd84b1728531a71b120166e86532/cclhm0069/mod2/ex_OCR/img_02.jpeg)\n",
+    "3. [Eugene D. Genovese - Da Rebelião à Revolução](https://github.com/ericbrasiln/intro-historia-digital/blob/4e41dca69dd2fd84b1728531a71b120166e86532/cclhm0069/mod2/ex_OCR/ex_pdf.pdf)"
    ]
   },
   {
