atualização geral para semana 10

--- a/cclhm0069/2_1_cronograma-4a.ipynb
+++ b/cclhm0069/2_1_cronograma-4a.ipynb
@@ -232,7 +232,7 @@
     "| Tipo          | [Encontro Virtual 5 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem8.html#encontro-virtual-5-as)| Leitura 4 (AS)|\n",
     "| ------------- | -------------------------------------------- |-------------------------------------------- |\n",
     "| Data e hora | 08/12/2021, às 19h | 06/12/2021 a 10/12/2021 |\n",
-    "| Carga Horária | 2h30 | 2h |\n",
+    "| Carga Horária | 2h30 | 2h30 |\n",
     "| Descrição | Workshop: Análise de texto com Voyant Tools | Leitura para o Encontro Virtual 6 |\n",
     "\n",
     "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem9.html#semana-9)"
@@ -264,7 +264,7 @@
     "| ------------- | -------------------------------------------- | -------------------------------------------- |\n",
     "| Data e hora | 15/12/2021, às 19h | 13/12/2021 a 17/12/2021 |\n",
     "| Carga Horária | 2h | 2h |\n",
-    "| Descrição | Algoritmos, dataficação da sociedade e o ofício de Historiadores/as: desigualdade, racismo e violências - Debate de textos | Vídeo de apoio: Mesa redonda sobre Racismo Algoritmico [Link]() |\n",
+    "| Descrição | Algoritmos, dataficação da sociedade e o ofício de Historiadores/as: desigualdade, racismo e violências - Debate de textos | Vídeo de apoio: Mesa redonda sobre Racismo Algoritmico [Link](https://youtu.be/F4CBYFLBUng) |\n",
     "\n",
     "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod3/sem10.html#semana-10)"
    ]
@@ -383,11 +383,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | [Encontro Virtual 7 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#encontro-virtual-7-as)|\n",
+    "| Tipo          | [Tarefa 9 (AA)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#tarefa-6)|\n",
     "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 04/02/2022 |\n",
+    "| Data e hora | 31/01/2022 a 04/02/2022 |\n",
     "| Carga Horária | 2h |\n",
-    "| Descrição | Workshop: Podcast para o ensino de história |\n",
+    "| Descrição | Tarefas relacionadas aos tutoriais do módulo |\n",
     "\n",
     "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#semana-14)"
    ]
@@ -407,11 +407,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | Encontro Virtual 8 (AS) - Encerramento do curso |\n",
-    "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 09/02/2022, às 19h |\n",
-    "| Carga Horária | 2h |\n",
-    "| Descrição | Momento para encerrar o curso e avaliar seus resultados e sugerir mudanças coletivamente.|"
+    "| Tipo          | [Encontro Virtual 7 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem15.html#encontro-virtual-7-as)| Encerramento do curso |\n",
+    "| ------------- | -------------------------------------------- |---------------------------- |\n",
+    "| Data e hora | 09/02/2022 | 09/02/2022 |\n",
+    "| Carga Horária | 1h20 | 40min |\n",
+    "| Descrição | Workshop: Podcast para o ensino de história - convidado Victor Martins| Momento para encerrar o curso e avaliar seus resultados e sugerir mudanças coletivamente.|\n",
+    "\n",
+    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem15.html#semana-15)"
    ]
   }
  ],
