--- a/cclhm0069/2_1_cronograma-4b.ipynb
+++ b/cclhm0069/2_1_cronograma-4b.ipynb
@@ -232,7 +232,7 @@
     "| Tipo          | [Encontro Virtual 5 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem8.html#encontro-virtual-5-as)| Leitura 4 (AS)|\n",
     "| ------------- | -------------------------------------------- |-------------------------------------------- |\n",
     "| Data e hora | 08/12/2021, às 19h | 06/12/2021 a 10/12/2021 |\n",
-    "| Carga Horária | 2h30 | 2h |\n",
+    "| Carga Horária | 2h30 | 2h30 |\n",
     "| Descrição | Workshop: Análise de texto com Voyant Tools | Leitura para o Encontro Virtual 6 |\n",
     "\n",
     "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod2/sem9.html#semana-9)"
@@ -264,7 +264,7 @@
     "| ------------- | -------------------------------------------- | -------------------------------------------- |\n",
     "| Data e hora | 15/12/2021, às 19h | 13/12/2021 a 17/12/2021 |\n",
     "| Carga Horária | 2h | 2h |\n",
-    "| Descrição | Algoritmos, dataficação da sociedade e o ofício de Historiadores/as: desigualdade, racismo e violências - Debate de textos | Vídeo de apoio: Mesa redonda sobre Racismo Algoritmico [Link]() |\n",
+    "| Descrição | Algoritmos, dataficação da sociedade e o ofício de Historiadores/as: desigualdade, racismo e violências - Debate de textos | Vídeo de apoio: Mesa redonda sobre Racismo Algoritmico [Link](https://youtu.be/F4CBYFLBUng) |\n",
     "\n",
     "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod3/sem10.html#semana-10)"
    ]
@@ -313,7 +313,7 @@
    "source": [
     "| Tipo          | [Atividade Assíncrona 5 (AA)](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem11.html#atividade-assíncrona-5-aa)|\n",
     "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 31/01/2022 a 04/02/2022 |\n",
+    "| Data e hora | 10/01/2022 a 14/01/2022 |\n",
     "| Carga Horária | 2h |\n",
     "| Descrição | Vídeos de apoio e tutoriais de Python e preparação do ambiente para as aulas seguintes. |\n",
     "\n",
@@ -352,7 +352,7 @@
     "\n",
     "**Período**: 24/01/2022 a 28/01/2022\n",
     "\n",
-    "**CH**: 2h"
+    "**CH**: 2h30"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "source": [
     "| Tipo          | [Live Coding 3 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem14.html#live-coding-3-as)|\n",
     "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 09/02/2022, às 19h |\n",
+    "| Data e hora | 02/02/2022, às 19h |\n",
     "| Carga Horária | 2h30 |\n",
     "| Descrição | Coleta de dados com Python: WGET, youtubedl e twitter-scrapper|\n",
     "\n",
@@ -407,11 +407,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | Encontro Virtual 8 (AS) - Encerramento do curso |\n",
-    "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 09/02/2022, às 19h |\n",
-    "| Carga Horária | 2h |\n",
-    "| Descrição | Momento para encerrar o curso e avaliar seus resultados e sugerir mudanças coletivamente.|\n"
+    "| Tipo          | [Encontro Virtual 7 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem15.html#encontro-virtual-7-as)| Encerramento do curso |\n",
+    "| ------------- | -------------------------------------------- |---------------------------- |\n",
+    "| Data e hora | 04/02/2022 | 04/02/2022 |\n",
+    "| Carga Horária | 1h20 | 40min |\n",
+    "| Descrição | Workshop: Podcast para o ensino de história - convidado Victor Martins| Momento para encerrar o curso e avaliar seus resultados e sugerir mudanças coletivamente.|\n",
+    "\n",
+    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem15.html#semana-15)"
    ]
   }
  ],
