--- a/cclhm0069/mod2/intro.ipynb
+++ b/cclhm0069/mod2/intro.ipynb
@@ -14,8 +14,8 @@
     "| Tipo de atividade | Quantidade        | CH   |\n",
     "| ----------------- | ----------------- | ---- |\n",
     "| EV [workshops]    | 3 (2h30)          | 7h30 |\n",
-    "| AA                | 1 (2h30) + 1 (2h) | 4h30 |\n",
-    "| Leitura           | 1 (4h)            | 4h   |\n",
+    "| AA                | 2 (2h30) + 1 (1h) | 6h   |\n",
+    "| Leitura           | 1 (2h30)          | 4h   |\n",
     "\n",
     "* Carga horária total: 16h\n",
     "* Dificuldade Baixa\n",
@@ -25,7 +25,8 @@
     "1. Workshop 01: Repositórios de fontes online e a pesquisa digital\n",
     "2. Vídeo-aula: Organização: Zotero\n",
     "3. Workshop 02: Tratamento de texto com OCR\n",
-    "4. Workshop 03: Análise de texto: Voyant tools e TagTog\n"
+    "4. Vídeo de apoio: TagTog\n",
+    "5. Workshop 03: Análise de texto: Voyant tools\n"
    ]
   }
  ],
