--- a/cclhm0069/mod3/sem10.ipynb
+++ b/cclhm0069/mod3/sem10.ipynb
@@ -42,7 +42,14 @@
     "\n",
     "**CH**: 2h\n",
     "\n",
-    "**Plataforma**: `YoutTube` - Link: []()\n"
+    "**Plataforma**: `YoutTube` - Link: [Palestra de Tarcízio Silva sobre Racismo Algorítmico](https://youtu.be/F4CBYFLBUng)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/F4CBYFLBUng\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
    ]
   }
  ],
