--- a/cclhm0069/mod4a/intro.ipynb
+++ b/cclhm0069/mod4a/intro.ipynb
@@ -8,10 +8,11 @@
     "\n",
     "| Tipo de atividade | Quantidade | CH   |\n",
     "| ----------------- | ---------- | ---- |\n",
-    "| AA [Tutoriais]    | 3          | 7h30  |\n",
-    "| AS [Workshop]     | 1          | 2h30\n",
+    "| AA [Tutoriais]    | 4          | 10h  |\n",
+    "| AA [Tarefa]       | 1          | 2h   |\n",
+    "| EV 7 [Workshop]   | 1          | 2h   |\n",
     "\n",
-    "* Carga horária total: 10h\n",
+    "* Carga horária total: 14h\n",
     "* Dificuldade: Média\n",
     "\n",
     "## Temas\n",
