--- a/cclhm0069/mod4b/intro.ipynb
+++ b/cclhm0069/mod4b/intro.ipynb
@@ -8,10 +8,11 @@
     "\n",
     "| Tipo de atividade  | Quantidade | CH   |\n",
     "| ------------------ | ---------- | ---- |\n",
-    "| EV [*Live coding*] | 3 (2h30)   | 7h30  |\n",
-    "| AA                 | 1 (2h30)     | 2h30   |\n",
+    "| EV [*Live coding*] | 3 (2h30)   | 7h30 |\n",
+    "| AA                 | 1 (2h30)   | 4h30 |\n",
+    "| EV [Workshop]      | 1 (2h)     | 2h   |\n",
     "\n",
-    "* Carga horária total: 10h\n",
+    "* Carga horária total: 14h\n",
     "* Dificuldade: Alta\n",
     "\n",
     "## Temas\n",
