--- a/cclhm0069/mod4b/sem14.ipynb
+++ b/cclhm0069/mod4b/sem14.ipynb
@@ -17,11 +17,9 @@
    "source": [
     "| Tipo          | [Live Coding 3 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem14.html#live-coding-3-as)|\n",
     "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 09/02/2022, às 19h |\n",
+    "| Data e hora | 02/02/2022, às 19h |\n",
     "| Carga Horária | 2h30 |\n",
-    "| Descrição | Coleta de dados com Python: WGET, youtubedl e twitter-scrapper|\n",
-    "\n",
-    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem14.html#semana-14)"
+    "| Descrição | Coleta de dados com Python: WGET, youtubedl e twitter-scrapper|\n"
    ]
   }
  ],
