--- a/cclhm0069/mod4a/sem14.ipynb
+++ b/cclhm0069/mod4a/sem14.ipynb
@@ -15,11 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Tipo          | [Encontro Virtual 7 (AS)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#encontro-virtual-7-as)|\n",
+    "| Tipo          | [Tarefa 9 (AA)](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#tarefa-6)|\n",
     "| ------------- | -------------------------------------------- |\n",
-    "| Data e hora | 04/02/2022 |\n",
+    "| Data e hora | 31/01/2022 a 04/02/2022 |\n",
     "| Carga Horária | 2h |\n",
-    "| Descrição | Workshop: Podcast para o ensino de história |"
+    "| Descrição | Tarefas relacionadas aos tutoriais do módulo |\n",
+    "\n",
+    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4a/sem14.html#semana-14)"
    ]
   }
  ],
