--- a/cclhm0069/mod4b/sem11.ipynb
+++ b/cclhm0069/mod4b/sem11.ipynb
@@ -19,9 +19,7 @@
     "| ------------- | -------------------------------------------- |\n",
     "| Data e hora | 31/01/2022 a 04/02/2022 |\n",
     "| Carga Horária | 2h |\n",
-    "| Descrição | Vídeos de apoio e tutoriais de Python e preparação do ambiente para as aulas seguintes. |\n",
-    "\n",
-    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem11.html#semana-11)"
+    "| Descrição | Vídeos de apoio e tutoriais de Python e preparação do ambiente para as aulas seguintes. |\n"
    ]
   }
  ],
