--- a/cclhm0069/mod4b/sem12.ipynb
+++ b/cclhm0069/mod4b/sem12.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Período**: 17/01/2022 a 21/01/2022\n",
     "\n",
-    "**CH**: 2h"
+    "**CH**: 2h30"
    ]
   },
   {
@@ -19,9 +19,7 @@
     "| ------------- | -------------------------------------------- |\n",
     "| Data e hora | 19/01/2022, às 19h |\n",
     "| Carga Horária | 2h30 |\n",
-    "| Descrição | Python do Zero I |\n",
-    "\n",
-    "[**Link para a página da semana**](https://ericbrasiln.github.io/intro-historia-digital/mod4b/sem12.html#semana-12)"
+    "| Descrição | Python do Zero I |\n"
    ]
   }
  ],
