--- a/cclhm0069/mod3/sem10_ap.ipynb
+++ b/cclhm0069/mod3/sem10_ap.ipynb
@@ -106,6 +106,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meu_nome = str(input('Qual é o seu nome? '))\n",
+    "\n",
+    "if meu_nome == 'Eric':\n",
+    "    print('Que nome bonito!')\n",
+    "else:\n",
+    "    print('Seu nome é tão normal!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idade = int(input('Qual a sua idade? '))\n",
+    "\n",
+    "if idade < 16:\n",
+    "    print('Você é tão jovem. Ainda não pode votar!')\n",
+    "elif idade >= 16 and idade <18:\n",
+    "    print('Nessa idade você tem a opção de votar.Já tirou o título de eleitor?')\n",
+    "elif idade >= 18 and idade < 65:\n",
+    "    print('Na sua idade o voto é obrigatório!')\n",
+    "else:\n",
+    "    print('Nessa idade o voto é facultativo!')\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,13 +155,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![tweet]("
+    "![tweet](https://github.com/ericbrasiln/intro-historia-digital/blob/945a2f6528af55f0f18c59e57afcfb93566e464a/cclhm0069/images/tweet_race.jpeg?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataficação das relações sociais"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quais impactos para a pesquisa histórica?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A opressão dos algoritmos - Debate dos textos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cathy O'Neil e os componentes da bomba\n",
+    "\n",
+    "#### O que é um modelo?\n",
+    "\n",
+    "- O que é um modelo?\n",
+    "- O exemplo do beisebol\n",
+    "- O exemplo da alimentação de uma família (31-33)\n",
+    "- Modelo é uma simplificação (33-35)\n",
+    "- Sucesso? (35)\n",
+    "- Racismo como modelo? (37)\n",
+    "- Modelos de Reincidência e o sistema penitenciário e judiciário nos EUA (40 - 44)\n",
+    "  - Retroalimentação (44)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Taxonomia de ADM (Algoritmos de Destruição em Massa)\n",
+    "\n",
+    "1. O modelo é opaco ou invisível?\n",
+    "2. É injusto? Destrói vidas?\n",
+    "3. Ganha escala?\n",
+    "\n",
+    "OPACIDADE + ESCALA + DANO = ADM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Noble e a opressão dos algoritmos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Objetivos do livro: acadêmico e político\n",
+    "- O caso das \"meninas negras\" no Google\n",
+    "- \"Racismo é a API fundamental da internet\" (14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Google Search\n",
+    "\n",
+    "- Empresa de publicidade;\n",
+    "- Implicações das tomadas de decisões algoritmicas (15);\n",
+    "- São erros? \n",
+    "- Quais impactos dos vieses racistas e sexistas nesses algoritmos para a sociedade?"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
