update build sem10

--- a/cclhm0069/mod3/sem10_ap.ipynb
+++ b/cclhm0069/mod3/sem10_ap.ipynb
@@ -17,8 +17,8 @@
     "\n",
     "Para tanto vamos discutir os seguintes textos:\n",
     "\n",
-    "1. [O'NEIL, CATHY. Componentes da bomba. O que é um modelo? In: **Algoritmos de Destruição em massa**. São Paulo: Editora Rua do Sabão, 2020. pp. 25-50](biblio/oneil.pdf)\n",
-    "2. [NOBLE, Safiya Umoja. Introdução. In: **Algoritmos da opressão**. São Paulo: Editora Rua do Sabão, 2021. pp. 7-28](biblio/noble.pdf)"
+    "1. [O'NEIL, CATHY. Componentes da bomba. O que é um modelo? In: **Algoritmos de Destruição em massa**. São Paulo: Editora Rua do Sabão, 2020. pp. 25-50](https://github.com/ericbrasiln/intro-historia-digital/blob/bc111c29d3ec6f35221358f5c4af6edcebef524d/cclhm0069/biblio/oneil.pdf)\n",
+    "2. [NOBLE, Safiya Umoja. Introdução. In: **Algoritmos da opressão**. São Paulo: Editora Rua do Sabão, 2021. pp. 7-28](https://github.com/ericbrasiln/intro-historia-digital/blob/bc111c29d3ec6f35221358f5c4af6edcebef524d/cclhm0069/biblio/noble.pdf)"
    ]
   },
   {
